# raytracer

./: CMakeLists.txt  desktop.cpp  display.cpp  display.h  hittable.h  hittable_list.h  img.ppm  main.cpp  ray.h  rtmath.h  sphere.h  vector.h
